[package]
name = "shuttle-deployer-alpha"
version = "0.14.0"
edition.workspace = true
license.workspace = true
description = "Service with instances created per project for handling the compilation, loading, and execution of Shuttle services"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["headers", "json", "query", "ws"] }
bytes = { workspace = true }
cargo = { workspace = true }
cargo_metadata = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
flate2 = { workspace = true }
fqdn = { workspace = true }
futures = { workspace = true }
home = { workspace = true }
hyper = { workspace = true, features = ["client", "http1", "http2", "tcp"] }
# not great, but waiting for WebSocket changes to be merged
hyper-reverse-proxy = { git = "https://github.com/chesedo/hyper-reverse-proxy", branch = "master" }
once_cell = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-http = { workspace = true }
pipe = { workspace = true }
portpicker = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [
  "runtime-tokio-native-tls",
  "sqlite",
  "chrono",
  "json",
  "migrate",
  "uuid",
] }
strum = { workspace = true }
tar = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "process"] }
toml = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true, features = ["make"] }
tower-http = { workspace = true, features = ["auth", "trace"] }
tracing = { workspace = true, features = ["default"] }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  "default",
  "env-filter",
  "fmt",
] }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dependencies.shuttle-common]
workspace = true
features = ["backend", "models", "openapi"]

[dependencies.shuttle-proto]
workspace = true

[dependencies.shuttle-service]
workspace = true
features = ["builder"]

[dev-dependencies]
ctor = { workspace = true }
hex = "0.4.3"
rand = { workspace = true }
tempfile = { workspace = true }
