[package]
name = "shuttle-deployer"
version = "0.18.0"
edition.workspace = true
license.workspace = true
description = "Service to execute the deployment of projects on shuttle"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["headers", "json", "query", "ws"] }
bollard = "0.14.0"
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
fqdn = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
home = { workspace = true }
hyper = { workspace = true, features = ["client", "http1", "http2", "tcp"] }
hyper-reverse-proxy = { git = "https://github.com/chesedo/hyper-reverse-proxy", branch = "master" }
once_cell = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-http = { workspace = true }
portpicker = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [
    "chrono",
    "migrate",
    "runtime-tokio-native-tls",
    "sqlite",
] }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "fs"] }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
ulid = { workspace = true, features = ["serde", "uuid"] }

[dependencies.shuttle-common]
workspace = true
features = ["backend", "models", "openapi", "builder"]

[dependencies.shuttle-proto]
workspace = true
