[package]
name = "e2e"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
crossterm = "0.25.0"
lazy_static = "1.4.0"
portpicker = "0.1.1"
rand = "0.8.5"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
which = "4.2.5"
tempdir = "0.3.7"
