[package]
name = "shuttle-gateway"
version = "0.34.1"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
shuttle-common = { workspace = true, features = [
    "backend",
    "models",
    "openapi",
    "persist",
] }
shuttle-proto = { workspace = true, features = ["provisioner"] }
shuttle-orchestrator = { workspace = true }

async-trait = { workspace = true }
axum = { workspace = true, features = ["default", "headers"] }
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
bollard = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
fqdn = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
hyper = { workspace = true, features = ["stream"] }
hyper-reverse-proxy = { workspace = true }
instant-acme = "0.2.0"
lazy_static = "1.4.0"
num_cpus = "1.15.0"
once_cell = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-contrib = { workspace = true }
opentelemetry-http = { workspace = true }
pem = "1.1.1"
pin-project = { workspace = true }
rand = { workspace = true }
rcgen = "0.11.3"
reqwest = { workspace = true }
rustls = "0.21.7"
rustls-pemfile = "1.0.1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["sqlite", "json", "migrate"] }
strum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["steer"] }
tower-http = { workspace = true }
tracing = { workspace = true, features = ["default"] }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["default", "env-filter"] }
ttl_cache = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
x509-parser = "0.15.1"
tonic = { workspace = true }
tower-sanitize-path = "0.2.0"
ulid = { workspace = true, features = ["serde"] }

[dev-dependencies]
anyhow = { workspace = true }
colored = { workspace = true }
flate2 = { workspace = true }
jsonwebtoken = { workspace = true }
portpicker = { workspace = true }
ring = { workspace = true }
rmp-serde = { workspace = true }
shuttle-common-tests = { workspace = true }
snailquote = "0.3.1"
tar = { workspace = true }
tempfile = { workspace = true }
test-context = "0.1.4"
