[package]
name = "shuttle-ifc"
version = "0.57.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Infrastructure from Code (IfC) parser for the Shuttle platform (shuttle.dev)"
homepage = "https://www.shuttle.dev"

[dependencies]
shuttle-common = { workspace = true, features = ["models"] }

proc-macro2 = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
