[package]
name = "lib"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.136"
serde_json = "1.0.79"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
rocket = "0.5.0-rc.1"
anyhow = "1.0.55"
chrono = { version = "0.4", features = ["serde"] }