[package]
name = "shuttle-mcp"
version = "0.55.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
rmcp = { workspace = true, features = ["server", "transport-io"] }
serde = { workspace = true }
tokio = { workspace = true, features = ["full"] }
urlencoding = { workspace = true }
