[package]
name = "shuttle-mcp"
version = "0.56.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shuttle MCP server"

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
rmcp = { workspace = true, features = ["server", "transport-io", "macros"] }
schemars = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["full"] }
urlencoding = { workspace = true }
