[package]
name = "shuttle-mcp"
version = "0.57.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shuttle MCP server"

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
rmcp = { workspace = true, features = ["server", "transport-io", "macros"] }
# remove this when unlocking `rmcp`
rmcp-macros = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
urlencoding = { workspace = true }
