[package]
name = "shuttle-next"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "=1.20.1", features = ["full"] }
clap ={ version = "4.0.18", features = ["derive"] }
thiserror = "1.0.37"
async-trait = "0.1.58"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dependencies.shuttle-service]
version = "0.7.0"
default-features = false
features = ["loader"]
path = "../service"

[dependencies.shuttle-common]
version = "0.7.0"
path = "../common"
