[package]
name = "shuttle-next"
version = "0.8.0"
edition.workspace = true
license.workspace = true
description = "Macros and aliases to deploy wasm on the shuttle platform (https://www.shuttle.rs/)"
homepage = "https://www.shuttle.rs"

[lib]

[dependencies]
# most axum features can be enabled, but "tokio" and "ws" depend on socket2
# via "hyper/tcp" which is not compatible with wasi
axum = { version = "0.6.0", default-features = false }
futures-executor = "0.3.21"
http = "0.2.7"
rmp-serde = "1.1.1"
tower-service = "0.3.1"
tracing-subscriber = "0.3.16"

[dependencies.shuttle-codegen]
workspace = true
features = ["next"]

[dependencies.shuttle-common]
workspace = true
features = ["wasm"]
