[package]
name = "shuttle-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Library for all the gRPC definitions used by shuttle"

[dependencies]
shuttle-common = { workspace = true }

anyhow = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
futures-core = "0.3.28"
http = { workspace = true, optional = true }
portpicker = { workspace = true, optional = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true, optional = true }
tonic = { workspace = true }
tower = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
test-context = { workspace = true }
portpicker = { workspace = true }

[features]
default = []
test-utils = ["portpicker"]

logger = [
    "shuttle-common/service",
    "chrono",
    "tracing",
    "tokio/macros",
    "tokio/time",
]
provisioner = []
resource-recorder = ["anyhow", "serde_json"]
runtime = []

client = ["shuttle-common/claims", "tower"]
logger-client = ["logger", "client", "http"]
provisioner-client = ["provisioner", "client", "http"]
runtime-client = ["runtime", "client", "anyhow", "tokio", "tracing"]
resource-recorder-client = [
    "resource-recorder",
    "client",
    "async-trait",
    "http",
    "shuttle-common/backend",
]
