[package]
name = "shuttle-provisioner"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Service responsible for provisioning and managing resources for services"
publish = false

[dependencies]
aws-config = "0.55.2"
aws-sdk-rds = "0.27.0"
aws-sdk-dynamodb = "0.27.0"
aws-sdk-iam = "0.27.0"
clap = { workspace = true, features = ["env"] }
fqdn = { workspace = true }
mongodb = "2.4.0"
prost = { workspace = true }
rand = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-native-tls"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic = { workspace = true }
tracing = { workspace = true, features = ["default"] }
tracing-subscriber = { workspace = true, features = ["default", "fmt"] }

[dependencies.shuttle-common]
workspace = true
features = ["backend"]

[dependencies.shuttle-proto]
workspace = true

[dev-dependencies]
ctor = { workspace = true }
once_cell = { workspace = true }
portpicker = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
