[package]
name = "shuttle-resource-recorder"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [
    "chrono",
    "json",
    "migrate",
    "runtime-tokio-rustls",
    "sqlite",
    "uuid",
] }
strum = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["default"] }
uuid = { workspace = true, features = ["v4"] }

[dependencies.shuttle-common]
workspace = true
features = ["backend", "models"]

[dev-dependencies]
pretty_assertions = { workspace = true }
