[package]
name = "shuttle-resource-recorder"
version = "0.48.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
shuttle-backends = { workspace = true }
shuttle-common = { workspace = true, features = ["extract_propagation", "tonic", "sqlx"] }
shuttle-proto = { workspace = true, features = ["resource-recorder"] }

async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
prost-types = { workspace = true }
sqlx = { workspace = true, features = ["chrono", "migrate", "sqlite"] }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["default"] }
ulid = { workspace = true }

[dev-dependencies]
portpicker = { workspace = true }
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
shuttle-backends = { workspace = true, features = ["test-utils"] }
shuttle-common-tests = { workspace = true }
