[package]
name = "shuttle-runtime"
version = "0.48.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime to run a service on the Shuttle platform"

[lib]
doctest = false

[dependencies]
shuttle-api-client = { workspace = true }
shuttle-codegen = { workspace = true }
shuttle-common = { workspace = true, features = ["extract_propagation"] }
shuttle-proto = { workspace = true, features = ["runtime"] }
shuttle-service = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
hyper = { workspace = true, features = ["http1", "server", "tcp"] }
serde = { workspace = true }
serde_json = { workspace = true }
strfmt = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]
portpicker = { workspace = true }
shuttle-service = { workspace = true, features = ["builder", "runner"] }
shuttle-proto = { workspace = true, features = ["provisioner"] }
uuid = { workspace = true }

[features]
default = ["setup-tracing"]
api-client-tracing = ["shuttle-api-client/tracing"]

setup-tracing = [
    "tracing-subscriber/default",
    "tracing-subscriber/env-filter",
]
